--- a/index.html
+++ b/index.html
@@ -5,22 +5,188 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <title>Uwi Web App</title>
 
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style type="text/css">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-	
+		#bg{
+			background-color: azure;
+		}
+
+		.carousel-inner > .item > img,
+  		.carousel-inner > .item > a > img {
+      		width: 100%;
+      		margin-right: 0px;
+      		margin-left: 0px;
+  		}
+
+  
+  		.affix {
+	     	top: 0;
+	    	width: 100%;
+  		}
+
+  		.affix + .container-fluid {
+      		padding-top: 70px;
+  		}
+
+  		body {
+		      position: relative;
+		  }
+		  #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
+		  #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
+		  #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
+		  #section41 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
+		  #section42 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+
+	</style>
+	<script>
+
+</script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
+	 
+	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    <!-- Indicators -->
+	    <ol class="carousel-indicators">
+	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	      <li data-target="#myCarousel" data-slide-to="1"></li>
+	      <li data-target="#myCarousel" data-slide-to="2"></li>
+	      <li data-target="#myCarousel" data-slide-to="3"></li>
+	    </ol>
+
+	    <!-- Wrapper for slides -->
+	    <div class="carousel-inner" role="listbox">
+
+	      <div class="item active">
+	        <img src="img/uwi1.jpg" alt="UWI St.Augustine" width="460" height="345">
+		      <div class="carousel-caption">
+			    <h3>UWI</h3>
+			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
+			  </div>
+	      </div>
+
+	      <div class="item">
+	        <img src="img/uwi2.jpg" alt="UWI St.Augustine" width="460" height="345">
+	        <div class="carousel-caption">
+			    <h3>UWI</h3>
+			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
+			</div>
+	      </div>
+	    
+	      <div class="item">
+	        <img src="img/uwi3.jpg" alt="UWI St.Augustine" width="460" height="345">
+	        <div class="carousel-caption">
+			    <h3>UWI</h3>
+			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
+			</div>
+	      </div>
+
+	      <div class="item">
+	        <img src="img/uwi4.jpg" alt="UWI MONA" width="460" height="345">
+	        <div class="carousel-caption">
+			    <h3>UWI</h3>
+			    <p>Uwi Campus St.Augustine Trinidad and Tobago.</p>
+			</div>
+	      </div>
+	    </div>
+
+	    <!-- Left and right controls -->
+	    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	      <span class="sr-only">Previous</span>
+	    </a>
+	    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	      <span class="sr-only">Next</span>
+	    </a>
+	  </div>
+	
 
 
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">UWI MOBILE</a>
+	    </div>
+	    <div>
+	      <div class="collapse navbar-collapse" id="myNavbar">
+	        <ul class="nav navbar-nav">
+	          <li><a href="#section1">Section 1</a></li>
+	          <li><a href="#section2">Section 2</a></li>
+	          <li><a href="#section3">Section 3</a></li>
+	          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
+	            <ul class="dropdown-menu">
+	              <li><a href="#section41">Section 4-1</a></li>
+	              <li><a href="#section42">Section 4-2</a></li>
+	            </ul>
+	          </li>
+	        </ul>
+	      </div>
+	    </div>
+	  </div>
+	</nav>
 
+	<div id="section1" class="container-fluid">
+	  <h1>Section 1</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="section2" class="container-fluid">
+	  <h1>Section 2</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="section3" class="container-fluid">
+	  <h1>Section 3</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="section41" class="container-fluid">
+	  <h1>Section 4 Submenu 1</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+	<div id="section42" class="container-fluid">
+	  <h1>Section 4 Submenu 2</h1>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+	</div>
+
+
+<!--
+	<nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">UWI MOBILE</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#">Page 1</a></li>
+	      <li><a href="#">Page 2</a></li>
+	      <li><a href="#">Page 3</a></li>
+	    </ul>
+	  	<form class="navbar-form navbar-left">
+      		<div class="form-group">
+        		<input type="text" class="form-control" placeholder="Search">
+      		</div>
+      		<button type="submit" class="btn btn-default">Submit</button>
+    	</form>
+	  </div>
+	</nav>
+-->
 
 
 	
