added nav bar right and section before section 1 final

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 		  #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
 		  #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
 		  #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
-		  #section41 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
-		  #section42 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+		  #section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
+		  #section5 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
 
 	</style>
 	<script>
@@ -57,7 +57,8 @@
 
 <body id="bg" data-spy="scroll" data-target=".navbar" data-offset="50">
 
-
+<!-- **************************************************************************************************** -->
+<!-- Carousel -->
 	 
 	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    <!-- Indicators -->
@@ -116,6 +117,7 @@
 	  </div>
 	
 <!-- **************************************************************************************************** -->
+<!-- Nav Bar top of page -->
 
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="container-fluid">
@@ -130,15 +132,19 @@
 	    <div>
 	      <div class="collapse navbar-collapse" id="myNavbar">
 	        <ul class="nav navbar-nav">
-	          <li><a href="#section1">Section 1</a></li>
-	          <li><a href="#section2">Section 2</a></li>
-	          <li><a href="#section3">Section 3</a></li>
+	          <li><a href="#section1">About the Uwi</a></li>
+	          <li><a href="#section2">Uwi Campuses</a></li>
+	          <li><a href="#section3">How To Apply</a></li>
+	          <li><a href="#section4">Our Programmes</a></li>
+	          <li><a href="#section5">Contact Us</a></li>
+	          <!--
 	          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
 	            <ul class="dropdown-menu">
 	              <li><a href="#section41">Section 4-1</a></li>
 	              <li><a href="#section42">Section 4-2</a></li>
 	            </ul>
 	          </li>
+	          -->
 	        </ul>
 	      </div>
 	    </div>
@@ -146,31 +152,30 @@
 	</nav>
 
 <!-- **************************************************************************************************** -->
+<!-- Jumbotron and Nav Bar right of page -->
 
 	<div class="container-fluid">
       <div class="row row-offcanvas row-offcanvas-right">
 
         <div class="col-xs-12 col-sm-9">
           <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">More Information</button>
           </p>
           <div class="jumbotron">
             <h1>Hello, world!</h1>
             <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
           </div>
-          
         </div>
 
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="#" class="list-group-item active">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            
+            <a href="#" class="list-group-item active">Admissions</a>
+            <a href="#" class="list-group-item">Our Programmes</a>
+            <a href="#" class="list-group-item">Student Resources and Financial Aid</a>
+            <a href="#" class="list-group-item">Map of UWI</a>
+            <a href="#" class="list-group-item">Contact Us</a>
+            <a href="#" class="list-group-item">Visit the Official Site</a>
           </div>
         </div>
       </div>
@@ -178,9 +183,7 @@
     </div>
 
 <!-- **************************************************************************************************** -->
-   
-
-
+<!-- All other Sections -->
 
 	<div id="section1" class="container-fluid">
 	  <h1>Section 1</h1>
@@ -197,13 +200,15 @@
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	</div>
-	<div id="section41" class="container-fluid">
-	  <h1>Section 4 Submenu 1</h1>
+
+	<div id="section4" class="container-fluid">
+	  <h1>Section 4</h1>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	</div>
-	<div id="section42" class="container-fluid">
-	  <h1>Section 4 Submenu 2</h1>
+
+	<div id="section5" class="container-fluid">
+	  <h1>Section 5</h1>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
 	</div>
