--- a/index.html
+++ b/index.html
@@ -13,43 +13,11 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-  	<link href="offcanvas.css" rel="stylesheet">
+  	<link href="index.css" rel="stylesheet">
 
 	<style type="text/css">
-
-		#bg{
-			background-color: azure;
-		}
-		#myCarousel{
-			margin-bottom: 30px;
-		}
-		.carousel-inner > .item > img,
-  		.carousel-inner > .item > a > img {
-      		width: 100%;
-      		margin-right: 0px;
-      		margin-left: 0px;
-  		}
-
-  
-  		.affix {
-	     	top: 0;
-	    	width: 100%;
-  		}
-
-  		.affix + .container-fluid {
-      		padding-top: 70px;
-  		}
-
-  		body {
-		      position: relative;
-		  }
-		  #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
-		  #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
-		  #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
-		  #section4 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
-		  #section5 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
-
 	</style>
+
 	<script>
 
 </script>
@@ -133,18 +101,10 @@
 	      <div class="collapse navbar-collapse" id="myNavbar">
 	        <ul class="nav navbar-nav">
 	          <li><a href="#section1">About the Uwi</a></li>
-	          <li><a href="#section2">Uwi Campuses</a></li>
+	          <li><a href="#section2">News Feed</a></li>
 	          <li><a href="#section3">How To Apply</a></li>
 	          <li><a href="#section4">Our Programmes</a></li>
 	          <li><a href="#section5">Contact Us</a></li>
-	          <!--
-	          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
-	            <ul class="dropdown-menu">
-	              <li><a href="#section41">Section 4-1</a></li>
-	              <li><a href="#section42">Section 4-2</a></li>
-	            </ul>
-	          </li>
-	          -->
 	        </ul>
 	      </div>
 	    </div>
@@ -171,7 +131,7 @@
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
             <a href="#" class="list-group-item active">Admissions</a>
-            <a href="#" class="list-group-item">Our Programmes</a>
+            <a href="programmes.html" class="list-group-item">Our Programmes</a>
             <a href="#" class="list-group-item">Student Resources and Financial Aid</a>
             <a href="#" class="list-group-item">Map of UWI</a>
             <a href="#" class="list-group-item">Contact Us</a>
@@ -216,7 +176,7 @@
 
 
 
-	<script src="offcanvas.js"></script>
+	<script src="canvas.js"></script>
 </body>
 
 
